5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1644_2445.log
== TEST (2019-04-15 21:55:00) 
-- CODE:
escala = input("Digite a escala: (C/F)")
temp = float(input("Temperatura"))
tf = (1.8*temp)+32
tc = (temp-32)/1.8
if(medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(medida == "C"):
NameError: name 'medida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:55:44) 
-- CODE:
escala = input("Digite a escala: (C/F)")
temp = float(input("Temperatura"))
tf = (1.8*temp)+32
tc = (temp-32)/1.8
if(medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(medida == "C"):
NameError: name 'medida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:56:04) 
-- CODE:
escala = input("Digite a escala: (C/F)")
temp = float(input("Temperatura"))
tf = (1.8*temp)+32
tc = (temp-32)/1.8
if(escala == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:56:28) 
-- CODE:
escala = input("Digite a escala: (C/F)")
temp = float(input("Temperatura"))
tf = (1.8*temp)+32
tc = (temp-32)/1.8
if(escala == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))
-- EXECUTION TIME:
0.173569
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
